400x300 synthesized, missing some pins

--- a/openlane/first_dual_core/pin_order.cfg
+++ b/openlane/first_dual_core/pin_order.cfg
@@ -1,16 +1,24 @@
 #BUS_SORT
 
 #N
-read_out_I_top
+read_out_I_top\[0\]
+read_out_I_top\[1\]
+read_out_Q_top\[0\]
+read_out_Q_top\[1\]
 rstb_out
-gray_clk_out.*
-clk_master_out
-div2out
-no_ones_below_out.*
 ud_en_out
-read_out_Q_top
+div2out
+clk_master_out
+gray_clk_out\[1\]
+gray_clk_out\[2\]
+gray_clk_out\[3\]
+gray_clk_out\[4\]
+gray_clk_out\[5\]
+gray_clk_out\[6\]
+gray_clk_out\[7\]
 
 #W
+no_ones_below_out.*
 cos_out
 phi1b_dig_I
 cclk_I
@@ -19,7 +27,10 @@ fb1_I
 fb2_I
 cos_outb
 
-#W
+#E
+gray_clk_out\[8\]
+gray_clk_out\[9\]
+gray_clk_out\[10\]
 sin_out
 phi1b_dig_Q
 cclk_Q
@@ -29,8 +40,10 @@ fb2_Q
 cos_outb
 
 #S
-read_out_I
+read_out_I\[0]
+read_out_I\[1]
 rstb
 clk_master
 ud_en
-read_out_Q
+read_out_Q\[0]
+read_out_Q\[1]
