--- a/openlane/first_dual_core/pin_order.cfg
+++ b/openlane/first_dual_core/pin_order.cfg
@@ -1,14 +1,10 @@
 #BUS_SORT
 
 #N
-read_out_I_top\[0\]
-read_out_I_top\[1\]
-read_out_Q_top\[0\]
-read_out_Q_top\[1\]
 rstb_out
+clk_master_out
 ud_en_out
 div2out
-clk_master_out
 gray_clk_out\[1\]
 gray_clk_out\[2\]
 gray_clk_out\[3\]
@@ -16,28 +12,48 @@ gray_clk_out\[4\]
 gray_clk_out\[5\]
 gray_clk_out\[6\]
 gray_clk_out\[7\]
-
-#W
-no_ones_below_out.*
-cos_out
-phi1b_dig_I
-cclk_I
-comp_high_I
-fb1_I
-fb2_I
-cos_outb
-
-#E
 gray_clk_out\[8\]
 gray_clk_out\[9\]
 gray_clk_out\[10\]
-sin_out
-phi1b_dig_Q
-cclk_Q
-comp_high_Q
-fb1_Q
-fb2_Q
-cos_outb
+no_ones_below_out\[0\]
+no_ones_below_out\[1\]
+no_ones_below_out\[2\]
+
+#W
+cos_outb\[0\]
+fb1_I\[0\]
+phi1b_dig_I\[0\]
+comp_high_I\[0\]
+clkdiv2_I\[0\]
+cclk_I\[0\]
+cos_out\[0\]
+cos_outb\[1\]
+fb1_I\[1\]
+phi1b_dig_I\[1\]
+comp_high_I\[1\]
+clkdiv2_I\[1\]
+cclk_I\[1\]
+cos_out\[1\]
+read_out_I_top\[0\]
+read_out_I_top\[1\]
+
+#E
+sin_out\[0\]
+cclk_Q\[0\]
+clkdiv2_Q\[0\]
+comp_high_Q\[0\]
+phi1b_dig_Q\[0\]
+fb1_Q\[0\]
+sin_outb\[0\]
+sin_out\[1\]
+cclk_Q\[1\]
+clkdiv2_Q\[1\]
+comp_high_Q\[1\]
+phi1b_dig_Q\[1\]
+fb1_Q\[1\]
+sin_outb\[1\]
+read_out_Q_top\[0\]
+read_out_Q_top\[1\]
 
 #S
 read_out_I\[0]
@@ -45,5 +61,5 @@ read_out_I\[1]
 rstb
 clk_master
 ud_en
-read_out_Q\[0]
 read_out_Q\[1]
+read_out_Q\[0]
