updated openlane and open_pdks through Makefile, removed redundant sin/cosb and fb2_I/Q pins, updated pin_cfg, synthesized 480x100 digitl_unison (two cores)

--- a/openlane/digital_unison/pin_order.cfg
+++ b/openlane/digital_unison/pin_order.cfg
@@ -1,34 +1,40 @@
 #BUS_SORT
 
-#S
-rstb
-clk_master
-clkdiv2
-ud_en
-read_out_I
-read_out_Q
-
-#N
-rstb_out
-clk_master_out
-div2out
-ud_en_out
-gray_clk.*
-no_ones_below_out.*
-
 #E
-phi1b_dig
-cclk
-comp_high_I
-cos_out
-cos_outb
-fb1_I
-fb2_I
-
+read_out_Q\[1\]
+read_out_Q\[0\]
+read_out_I\[1\]
+read_out_I\[0\]
 
 #W
-comp_high_Q
-sin_out
-sin_outb
-fb1_Q
-fb2_Q
+clk_master
+ud_en
+rstb
+
+#N
+cos_out\[0\]
+fb1_I\[0\]
+clkdiv2_I\[0\]
+cclk_I\[0\]
+phi1b_dig_I\[0\]
+comp_high_I\[0\]
+cos_out\[1\]
+fb1_I\[1\]
+clkdiv2_I\[1\]
+cclk_I\[1\]
+phi1b_dig_I\[1\]
+comp_high_I\[1\]
+
+#S
+sin_out\[0\]
+fb1_Q\[0\]
+clkdiv2_Q\[0\]
+cclk_Q\[0\]
+phi1b_dig_Q\[0\]
+comp_high_Q\[0\]
+sin_out\[1\]
+fb1_Q\[1\]
+clkdiv2_Q\[1\]
+cclk_Q\[1\]
+phi1b_dig_Q\[1\]
+comp_high_Q\[1\]
