--- a/openlane/digital_unison/pin_order.cfg
+++ b/openlane/digital_unison/pin_order.cfg
@@ -24,6 +24,18 @@ clkdiv2_I\[1\]
 cclk_I\[1\]
 phi1b_dig_I\[1\]
 comp_high_I\[1\]
+cos_out\[2\]
+fb1_I\[2\]
+clkdiv2_I\[2\]
+cclk_I\[2\]
+phi1b_dig_I\[2\]
+comp_high_I\[2\]
+cos_out\[3\]
+fb1_I\[3\]
+clkdiv2_I\[3\]
+cclk_I\[3\]
+phi1b_dig_I\[3\]
+comp_high_I\[3\]
 
 #S
 sin_out\[0\]
@@ -38,3 +50,15 @@ clkdiv2_Q\[1\]
 cclk_Q\[1\]
 phi1b_dig_Q\[1\]
 comp_high_Q\[1\]
+sin_out\[2\]
+fb1_Q\[2\]
+clkdiv2_Q\[2\]
+cclk_Q\[2\]
+phi1b_dig_Q\[2\]
+comp_high_Q\[2\]
+sin_out\[3\]
+fb1_Q\[3\]
+clkdiv2_Q\[3\]
+cclk_Q\[3\]
+phi1b_dig_Q\[3\]
+comp_high_Q\[3\]
