--- a/openlane/digital_unison/pin_order.cfg
+++ b/openlane/digital_unison/pin_order.cfg
@@ -36,6 +36,18 @@ clkdiv2_I\[3\]
 cclk_I\[3\]
 phi1b_dig_I\[3\]
 comp_high_I\[3\]
+cos_out\[4\]
+fb1_I\[4\]
+clkdiv2_I\[4\]
+cclk_I\[4\]
+phi1b_dig_I\[4\]
+comp_high_I\[4\]
+cos_out\[5\]
+fb1_I\[5\]
+clkdiv2_I\[5\]
+cclk_I\[5\]
+phi1b_dig_I\[5\]
+comp_high_I\[5\]
 
 #S
 sin_out\[0\]
@@ -62,3 +74,15 @@ clkdiv2_Q\[3\]
 cclk_Q\[3\]
 phi1b_dig_Q\[3\]
 comp_high_Q\[3\]
+sin_out\[4\]
+fb1_Q\[4\]
+clkdiv2_Q\[4\]
+cclk_Q\[4\]
+phi1b_dig_Q\[4\]
+comp_high_Q\[4\]
+sin_out\[5\]
+fb1_Q\[5\]
+clkdiv2_Q\[5\]
+cclk_Q\[5\]
+phi1b_dig_Q\[5\]
+comp_high_Q\[5\]
