--- a/openlane/digital_unison/pin_order.cfg
+++ b/openlane/digital_unison/pin_order.cfg
@@ -48,6 +48,18 @@ clkdiv2_I\[5\]
 cclk_I\[5\]
 phi1b_dig_I\[5\]
 comp_high_I\[5\]
+cos_out\[6\]
+fb1_I\[6\]
+clkdiv2_I\[6\]
+cclk_I\[6\]
+phi1b_dig_I\[6\]
+comp_high_I\[6\]
+cos_out\[7\]
+fb1_I\[7\]
+clkdiv2_I\[7\]
+cclk_I\[7\]
+phi1b_dig_I\[7\]
+comp_high_I\[7\]
 
 #S
 sin_out\[0\]
@@ -86,3 +98,15 @@ clkdiv2_Q\[5\]
 cclk_Q\[5\]
 phi1b_dig_Q\[5\]
 comp_high_Q\[5\]
+sin_out\[6\]
+fb1_Q\[6\]
+clkdiv2_Q\[6\]
+cclk_Q\[6\]
+phi1b_dig_Q\[6\]
+comp_high_Q\[6\]
+sin_out\[7\]
+fb1_Q\[7\]
+clkdiv2_Q\[7\]
+cclk_Q\[7\]
+phi1b_dig_Q\[7\]
+comp_high_Q\[7\]
