digital_core synthesized with ifdef vcc1/vssd1 power pins, rough top added, starting with digital_core instancing into user_project_wrapper

--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,1 +1,6 @@
-mprj 1175 1690 N
+digital_unison_instance[0] 500 70 N
+digital_unison_instance[1] 500 570 N
+digital_unison_instance[2] 500 1070 N
+digital_unison_instance[3] 500 1570 N
+digital_unison_instance[4] 500 2070 N
+digital_unison_instance[5] 500 2570 N
