--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,6 +1,6 @@
-digital_unison_instance[0] 500 70 N
-digital_unison_instance[1] 500 570 N
-digital_unison_instance[2] 500 1070 N
-digital_unison_instance[3] 500 1570 N
-digital_unison_instance[4] 500 2070 N
-digital_unison_instance[5] 500 2570 N
+genblk1\[0\].digital_unison_instance 500 70 N
+genblk1\[1\].digital_unison_instance 500 570 N
+genblk1\[2\].digital_unison_instance 500 1070 N
+genblk1\[3\].digital_unison_instance 500 1570 N
+genblk1\[4\].digital_unison_instance 500 2070 N
+genblk1\[5\].digital_unison_instance 500 2570 N
