--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,6 +1,6 @@
-genblk1\[0\].digital_unison_instance 500 570 N
-genblk1\[1\].digital_unison_instance 500 1970 N
-genblk1\[2\].digital_unison_instance 500 1570 N
-genblk1\[3\].digital_unison_instance 500 2070 N
-genblk1\[4\].digital_unison_instance 500 2570 N
-genblk1\[5\].digital_unison_instance 500 3070 N
+digital_unison_instance_0 500 500 N
+digital_unison_instance_1 500 1020 N
+digital_unison_instance_2 500 1540 N
+digital_unison_instance_3 500 2060 N
+digital_unison_instance_4 500 2580 N
+digital_unison_instance_5 500 3100 N
