--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,4 +1,5 @@
 digital_unison_instance_0 500 320 N
+analog_Q_0 500 100 N
 digital_unison_instance_1 500 860 N
 digital_unison_instance_2 500 1400 N
 digital_unison_instance_3 500 1940 N
