--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,5 +1,6 @@
 digital_unison_instance_0 500 320 N
-analog_core_Q_0 500 139.915 N
+analog_core_I_0 500 440 N
+analog_core_Q_0 500 132.66 N
 digital_unison_instance_1 500 860 N
 digital_unison_instance_2 500 1400 N
 digital_unison_instance_3 500 1940 N
