removed dense eastern ports from filter_p_m (including power), wired up more interconnects for two filter_p_m blocks on the lowest unison, XOR fails as analog macros are missing power

--- a/openlane/user_project_wrapper/macro.cfg
+++ b/openlane/user_project_wrapper/macro.cfg
@@ -1,5 +1,6 @@
 digital_unison_instance_0 500 320 N
-analog_core_Q_0 500 32.66 N
+analog_core_Q_u0_p0 500 131 N
+analog_core_Q_u0_p1 753.92 131 N
 digital_unison_instance_1 500 860 N
 digital_unison_instance_2 500 1400 N
 digital_unison_instance_3 500 1940 N
